--- a/index.html
+++ b/index.html
@@ -38,13 +38,24 @@
     <main class="container grid gap-y-3 my-3">
         <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
         <section>
-            Loading...
+            <h3 class="title text-green-600">Version - 0.0.0</h3>
+            <div class="box">
+                <p>Started on: 01 December 2024</p>
+                <p>Status: <span class="text-green-600">Active</span></p>
+                <p>Last Updated: 01 December 2024</p>
+            </div>
         </section>
         <section>
-            Loading...
+            <h3 class="title">Set 02</h3>
+            <div class="box">
+                Loading...
+            </div>
         </section>
         <section>
-            Loading...
+            <h3 class="title">Set 01</h3>
+            <div class="box">
+                Loading...
+            </div>
         </section>
     </main>
 
