--- a/index.html
+++ b/index.html
@@ -38,24 +38,73 @@
     <main class="container grid gap-y-3 my-3">
         <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
         <section>
-            <h3 class="title text-green-600">Version - 0.0.0</h3>
+            <h3 class="title">Version - 0.0.0</h3>
             <div class="box">
-                <p>Started on: 01 December 2024</p>
-                <p>Status: <span class="text-green-600">Active</span></p>
-                <p>Last Updated: 01 December 2024</p>
+                <table>
+                    <tr>
+                        <td>Started on:</td>
+                        <td>01 December 2024</td>
+                    </tr>
+                    <tr>
+                        <td>Last Updated:</td>
+                        <td>01 December 2024</td>
+                    </tr>
+                </table>
             </div>
+            <h3 class="title">Active</h3>
         </section>
-        <section>
-            <h3 class="title">Set 02</h3>
-            <div class="box">
-                Loading...
-            </div>
-        </section>
+        <!-- Start -->
+
         <section>
             <h3 class="title">Set 01</h3>
             <div class="box">
-                Loading...
+                <table>
+                    <td>Loading...</td>
+                </table>
             </div>
+            <h3 class="title">-</h3>
+        </section>
+
+        <!-- Completed -->
+        <section>
+            <h3 class="title">Set 00</h3>
+            <div class="box">
+                <table>
+                    <tr>
+                        <th>Book</th>
+                        <th>Pages</th>
+                    </tr>
+                    <tr>
+                        <td>Vocabulary</td>
+                        <td>1 - 15</td>
+                    </tr>
+                    <tr>
+                        <td>Competitive</td>
+                        <td>1 - 16</td>
+                    </tr>
+                    <tr>
+                        <td>Need</td>
+                        <td>1 - 60</td>
+                    </tr>
+                    <tr>
+                        <td>Ovijatri</td>
+                        <td>1 - 5</td>
+                    </tr>
+                    <tr>
+                        <td>ATM</td>
+                        <td>1 - 3</td>
+                    </tr>
+                    <tr>
+                        <td>Rabi</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>GK</td>
+                        <td>1 - 6</td>
+                    </tr>
+                </table>
+            </div>
+            <h3 class="title">Pre-Read</h3>
         </section>
     </main>
 
