--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main class="container grid gap-y-3 my-3">
         <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
         <section>
-            <h3 class="title">Version - 0.0.0</h3>
+            <h3 class="title">Version - 0.0.1</h3>
             <div class="box">
                 <table>
                     <tr>
@@ -59,13 +59,44 @@
             <h3 class="title">Set 01</h3>
             <div class="box">
                 <table>
-                    <td>Loading...</td>
+                    <tr>
+                        <th>Book</th>
+                        <th>Pages</th>
+                    </tr>
+                    <tr>
+                        <td>Vocabulary</td>
+                        <td>16 - 17</td>
+                    </tr>
+                    <tr>
+                        <td>Competitive</td>
+                        <td>Loading...</td>
+                    </tr>
+                    <tr>
+                        <td>Need</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Ovijatri</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>ATM</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Rabi</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>GK</td>
+                        <td>-</td>
+                    </tr>
                 </table>
             </div>
-            <h3 class="title">-</h3>
+            <h3 class="title">1 December 2024</h3>
+            <!-- Completed -->
         </section>
 
-        <!-- Completed -->
         <section>
             <h3 class="title">Set 00</h3>
             <div class="box">
