--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main class="container grid gap-y-3 my-3">
         <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
         <section>
-            <h3 class="title">Version - 0.0.1</h3>
+            <h3 class="title">Version - 0.1.1</h3>
             <div class="box">
                 <table>
                     <tr>
@@ -47,7 +47,7 @@
                     </tr>
                     <tr>
                         <td>Last Updated:</td>
-                        <td>01 December 2024</td>
+                        <td>02 December 2024</td>
                     </tr>
                 </table>
             </div>
@@ -62,38 +62,46 @@
                     <tr>
                         <th>Book</th>
                         <th>Pages</th>
+                        <th>Revision</th>
                     </tr>
                     <tr>
                         <td>Vocabulary</td>
                         <td>16 - 17</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Competitive</td>
                         <td>Loading...</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Need</td>
-                        <td>-</td>
+                        <td>Loading...</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Ovijatri</td>
-                        <td>-</td>
+                        <td>Loading...</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>ATM</td>
-                        <td>-</td>
+                        <td>4 - 7 - Loading...</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Rabi</td>
-                        <td>-</td>
+                        <td>Loading...</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>GK</td>
-                        <td>-</td>
+                        <td>Loading...</td>
+                        <td></td>
                     </tr>
                 </table>
             </div>
-            <h3 class="title">1 December 2024</h3>
+            <h3 class="title">1 - 2 December 2024</h3>
             <!-- Completed -->
         </section>
 
@@ -104,34 +112,42 @@
                     <tr>
                         <th>Book</th>
                         <th>Pages</th>
+                        <th>Revision</th>
                     </tr>
                     <tr>
                         <td>Vocabulary</td>
                         <td>1 - 15</td>
+                        <td>&#11088; &#11088; &#11088; &#11088;</td>
                     </tr>
                     <tr>
                         <td>Competitive</td>
                         <td>1 - 16</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Need</td>
                         <td>1 - 60</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Ovijatri</td>
                         <td>1 - 5</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>ATM</td>
                         <td>1 - 3</td>
+                        <td>&#11088;</td>
                     </tr>
                     <tr>
                         <td>Rabi</td>
-                        <td>-</td>
+                        <td>~</td>
+                        <td>~</td>
                     </tr>
                     <tr>
                         <td>GK</td>
                         <td>1 - 6</td>
+                        <td>&#11088;</td>
                     </tr>
                 </table>
             </div>
