--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main class="container grid gap-y-3 my-3">
         <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
         <section>
-            <h3 class="title">Version - 0.1.1</h3>
+            <h3 class="title">Version - 0.1.2</h3>
             <div class="box">
                 <table>
                     <tr>
@@ -47,7 +47,7 @@
                     </tr>
                     <tr>
                         <td>Last Updated:</td>
-                        <td>02 December 2024</td>
+                        <td>03 December 2024</td>
                     </tr>
                 </table>
             </div>
@@ -71,7 +71,7 @@
                     </tr>
                     <tr>
                         <td>Competitive</td>
-                        <td>Loading...</td>
+                        <td>17 - Loading...</td>
                         <td></td>
                     </tr>
                     <tr>
@@ -86,7 +86,7 @@
                     </tr>
                     <tr>
                         <td>ATM</td>
-                        <td>4 - 7 - Loading...</td>
+                        <td>4 - 8</td>
                         <td></td>
                     </tr>
                     <tr>
@@ -101,7 +101,7 @@
                     </tr>
                 </table>
             </div>
-            <h3 class="title">1 - 2 December 2024</h3>
+            <h3 class="title">1 - 3 December 2024</h3>
             <!-- Completed -->
         </section>
 
