--- a/admission-tracker/index.html
+++ b/admission-tracker/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <link rel='shortcut icon' href='./src/assets/favicon.ico' type='image/x-icon' />
-  <title>Admission Studies</title>
+  <link rel='icon' href='./src/assets/favicon.png' type='image/png' />
+  <title>Admission Tracker</title>
 </head>
 
 <body>
